fixed spacing

--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -5,6 +5,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+  padding-top: 30px;
 }
 
 .cloud-icon {
@@ -24,7 +25,7 @@ body {
   display: flex;
   font-family: 'Varela Round';
   max-width: 100%;
-  
+  padding-top: 240px;
   /* Adjust the maximum width to take up the available space */
 }
 
